[package]

name = "freetype-sys"
version = "0.13.1"
authors = ["Coeuvre <coeuvre@gmail.com>"]
keywords = ["freetype", "ffi"]
description = "Low level binding for FreeType font library"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PistonDevelopers/freetype-sys.git"
homepage = "https://github.com/PistonDevelopers/freetype-sys"

[dependencies]
libc = "0.2.42"
# This version of servo-freetype-sys has to align with the version more widely used by servo
# Thus it's pinned at 4.0.3 exactly.
servo-freetype-sys = "4.0.3"
